# 2A202600601_Day-10-Data-Pipeline-Data-Observability

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
data/clean/: papers_clean.json  papers_clean_corrupted.csv  papers_clean_corrupted.json  papers_clean_repaired.csv
data/embeddings/: papers_embeddings.json  papers_embeddings_corrupted.json  papers_embeddings_repaired.json
data/eval/: test_set.json
data/quality/: corrupted_freshness.json  corrupted_quality.json  repaired_freshness.json  repaired_quality.json
data/raw/: crossref_records.json  crossref_response.json
data/reports/: corruption_report.md  phase1_report.md
data/results/: agent_demo_answers.json  corrupted_answers.json  corrupted_metrics.json  corruption_log.json  repaired_answers.json  repaired_metrics.json
script/: run_all.py
src/evaluation/: testset.py
src/ingestion/: cleaning.py  corruption.py  crossref.py
src/observability/: quality.py  reporting.py
src/pipelines/: corruption_flow.py  phase1.py
tests/: conftest.py  test_cleaning.py  test_corruption.py  test_quality.py
